--- a/cancelamento.html
+++ b/cancelamento.html
@@ -5,12 +5,7 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gerador de Cancelamento</title>
   <style>
-    @font-face {
-      font-family: 'Cybrpnuk';
-      src: url('./fonts/Cybrpnuk2.ttf') format('truetype');
-      font-weight: normal;
-      font-style: normal;
-    }
+    @import url('https://fonts.cdnfonts.com/css/cyber-crown');
   
     body {
       font-family: Arial, sans-serif;
@@ -46,18 +41,17 @@
   
     #resultado {
       margin-top: 30px;
-      font-size: 1.5em;
-      max-width: 300px;
+      font-size: 1.0em;
+      max-width: 20%;
       margin-left: auto;
       margin-right: auto;
       word-wrap: break-word;
     }
   
-    .erro-assustador {
-  font-family: 'Cybrpnuk', monospace;
+  .erro-assustador {
+  font-family: 'Cyber Crown', monospace;
   color: #d9b3ff;
   font-weight: bold;
-  display: inline-block;
 
   /* Contorno escuro + sombra roxa reduzida */
   text-shadow:
@@ -68,49 +62,49 @@
 
   animation: eletricidadeRoxa 0.25s infinite;
 }
-
 @keyframes eletricidadeRoxa {
   0% {
     text-shadow:
-      0 0 2px #000000,
-      0 0 4px #b266ff,
-      0 0 6px #9933ff,
-      0 0 8px #8000ff;
+      0 0 1px #000000,
+      0 0 2px #b266ff,
+      0 0 3px #9933ff,
+      0 0 4px #8000ff;
     transform: translate(0, 0) skew(0deg);
   }
   25% {
     text-shadow:
-      0 0 2px #000000,
-      0 0 5px #b266ff,
-      0 0 7px #9933ff,
-      0 0 9px #8000ff;
+      0 0 1px #000000,
+      0 0 3px #b266ff,
+      0 0 4px #9933ff,
+      0 0 5px #8000ff;
     transform: translate(-0.5px, 0.3px) skew(-0.5deg);
   }
   50% {
     text-shadow:
-      0 0 2px #000000,
-      0 0 6px #cc80ff,
-      0 0 8px #a64dff,
-      0 0 10px #8000ff;
+      0 0 1px #000000,
+      0 0 4px #cc80ff,
+      0 0 5px #a64dff,
+      0 0 6px #8000ff;
     transform: translate(0.7px, -0.4px) skew(0.3deg);
   }
   75% {
     text-shadow:
-      0 0 2px #000000,
-      0 0 5px #b266ff,
-      0 0 7px #9933ff,
-      0 0 9px #8000ff;
+      0 0 1px #000000,
+      0 0 3px #b266ff,
+      0 0 4px #9933ff,
+      0 0 5px #8000ff;
     transform: translate(-0.3px, 0.6px) skew(-0.2deg);
   }
   100% {
     text-shadow:
-      0 0 2px #000000,
-      0 0 4px #b266ff,
-      0 0 6px #9933ff,
-      0 0 8px #8000ff;
+      0 0 1px #000000,
+      0 0 2px #b266ff,
+      0 0 3px #9933ff,
+      0 0 4px #8000ff;
     transform: translate(0, 0) skew(0deg);
   }
 }
+
 
   </style>
       
