--- a/cancelamento.html
+++ b/cancelamento.html
@@ -15,7 +15,7 @@
   
     h1 {
       font-size: 2.5em;
-      margin-bottom: 0;
+      margin-bottom: 20px;
     }
   
     h2 {
@@ -28,7 +28,7 @@
       font-size: 1.2em;
       padding: 5px;
       width: 300px;
-      margin-bottom: 10px;
+      margin-bottom: 20px;
     }
   
     button {
@@ -41,17 +41,17 @@
   
     #resultado {
       margin-top: 30px;
-      font-size: 1.0em;
-      max-width: 20%;
+      font-size: 1.5em;
+      max-width: 100%;
       margin-left: auto;
       margin-right: auto;
       word-wrap: break-word;
     }
   
   .erro-assustador {
-  font-family: 'Cyber Crown', monospace;
+  font-family: 'Cyber Crown';
   color: #d9b3ff;
-  font-weight: bold;
+  font-weight: 400;
 
   /* Contorno escuro + sombra roxa reduzida */
   text-shadow:
