--- a/cancelamento.html
+++ b/cancelamento.html
@@ -4,109 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Gerador de Cancelamento</title>
-  <style>
-    @import url('https://fonts.cdnfonts.com/css/cyber-crown');
-  
-    body {
-      font-family: Arial, sans-serif;
-      text-align: center;
-      margin-top: 100px;
-    }
-  
-    h1 {
-      font-size: 2.5em;
-      margin-bottom: 20px;
-    }
-  
-    h2 {
-      font-size: 2em;
-      margin-top: 0;
-      margin-bottom: 30px;
-    }
-  
-    input {
-      font-size: 1.2em;
-      padding: 5px;
-      width: 300px;
-      margin-bottom: 20px;
-    }
-  
-    button {
-      font-size: 1.2em;
-      padding: 10px 20px;
-      background-color: #ddd;
-      border: none;
-      cursor: pointer;
-    }
-  
-    #resultado {
-      margin-top: 30px;
-      font-size: 1.5em;
-      max-width: 100%;
-      margin-left: auto;
-      margin-right: auto;
-      word-wrap: break-word;
-    }
-  
-  .erro-assustador {
-  font-family: 'Cyber Crown';
-  color: #d9b3ff;
-  font-weight: 400;
-
-  /* Contorno escuro + sombra roxa reduzida */
-  text-shadow:
-    0 0 2px #000000,   /* contorno escuro */
-    0 0 4px #b266ff,
-    0 0 6px #9933ff,
-    0 0 8px #8000ff;
-
-  animation: eletricidadeRoxa 0.25s infinite;
-}
-@keyframes eletricidadeRoxa {
-  0% {
-    text-shadow:
-      0 0 1px #000000,
-      0 0 2px #b266ff,
-      0 0 3px #9933ff,
-      0 0 4px #8000ff;
-    transform: translate(0, 0) skew(0deg);
-  }
-  25% {
-    text-shadow:
-      0 0 1px #000000,
-      0 0 3px #b266ff,
-      0 0 4px #9933ff,
-      0 0 5px #8000ff;
-    transform: translate(-0.5px, 0.3px) skew(-0.5deg);
-  }
-  50% {
-    text-shadow:
-      0 0 1px #000000,
-      0 0 4px #cc80ff,
-      0 0 5px #a64dff,
-      0 0 6px #8000ff;
-    transform: translate(0.7px, -0.4px) skew(0.3deg);
-  }
-  75% {
-    text-shadow:
-      0 0 1px #000000,
-      0 0 3px #b266ff,
-      0 0 4px #9933ff,
-      0 0 5px #8000ff;
-    transform: translate(-0.3px, 0.6px) skew(-0.2deg);
-  }
-  100% {
-    text-shadow:
-      0 0 1px #000000,
-      0 0 2px #b266ff,
-      0 0 3px #9933ff,
-      0 0 4px #8000ff;
-    transform: translate(0, 0) skew(0deg);
-  }
-}
-
-
-  </style>
+<link rel="stylesheet" href="css.css">
       
 </head>
 <body>
@@ -118,70 +16,7 @@
 
   <div id="resultado"></div>
 
-  <script>
-    // Motivos genéricos de cancelamento
-    let motivosCancelamento = [];
-
-    // Carrega os motivos via fetch
-    async function carregarMotivos() {
-    try {
-        const resposta = await fetch('https://raw.githubusercontent.com/tymaeusz/floolishness/main/data.json');
-        if (!resposta.ok) throw new Error("Erro ao carregar motivos.");
-        motivosCancelamento = await resposta.json();
-    } catch (erro) {
-        console.error("Erro ao buscar motivos de cancelamento:", erro);
-        motivosCancelamento = ["motivo desconhecido (falha na carga de dados)."];
-    }
-    }
-
-    // Garante que o fetch ocorre antes de tudo
-    carregarMotivos();
-
-
-
-    // Mensagem especial para tymaeus
-    const CANCELAMENTO_TYMAEUS = `
-      <span class="erro-assustador">
-        ERRO FATAL: tymaeus foi cancelado(a) por ser uma calamidade arcana de nível desconhecido. 
-        Ocultamento falhou. O vazio está te observando.
-      </span>
-    `;
-  
-    function cancelar() {
-      const campoNome = document.getElementById("nome");
-      const resultadoElemento = document.getElementById("resultado");
-  
-      try {
-        const nomeUsuario = campoNome.value.trim().toLowerCase();
-  
-        if (!nomeUsuario) {
-          resultadoElemento.innerHTML = "";
-          return;
-        }
-  
-        if (nomeUsuario === "tymaeus") {
-          resultadoElemento.innerHTML = CANCELAMENTO_TYMAEUS;
-          return;
-        }
-  
-        const motivoAleatorio = obterMotivoAleatorio(motivosCancelamento);
-        resultadoElemento.innerHTML = `
-          <strong>${nomeUsuario}</strong> foi cancelado(a) por: <strong>${motivoAleatorio}</strong>`;
-          
-      } catch (erro) {
-        console.error("Erro ao gerar cancelamento:", erro);
-        resultadoElemento.innerHTML = `
-          <span class="erro-assustador">
-            Ocorreu um erro inesperado. O sistema de cancelamento foi comprometido.
-          </span>`;
-      }
-    }
-  
-    function obterMotivoAleatorio(lista) {
-      const indice = Math.floor(Math.random() * lista.length);
-      return lista[indice];
-    }
-  </script>
+  <script src="scripts.js"></script>
   
 </body>
 </html>
